--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
         <link rel="shortcut icon" href="/static/img/favicon.png">
 
         <!-- Le styles -->
-        {% assets filters="csssmin", output="gen/packed.css",
+        {% assets output="gen/packed.css",
             "vendor/bootstrap-3.3.2/css/bootstrap.min.css",
             "vendor/browser-detection/browser-detection.min.css",
             "vendor/select2/css/select2.min.css",
@@ -56,7 +56,6 @@
         <script type="text/javascript" src="{{url_for('static', filename='vendor/bootstrap-3.3.2/js/bootstrap.min.js')}}"></script>
         <script type="text/javascript" src="{{url_for('static', filename='vendor/select2/js/select2.min.js')}}"></script>
         <script type="text/javascript" src="{{url_for('static', filename='js/flash-messages.js')}}"></script>
-
         <script src="https://use.fontawesome.com/9082ec517a.js"></script>
 
         {% include '_ga.html' ignore missing %}
