Add custom JS logging

--- a/templates/base.html
+++ b/templates/base.html
@@ -115,6 +115,7 @@
     </script>
     {% endif %}
     <script type="text/javascript" src="{{url_for('static', filename='js/scripts.min.js')}}"></script>
+    <script type="text/javascript" src="{{url_for('static', filename='js/errors.js')}}"></script>
     <script>
         {% include 'cookies.js' %}
     </script>
