Customise special edit

--- a/templates/base.html
+++ b/templates/base.html
@@ -114,7 +114,7 @@
         Raven.config(publicDsn).install();
     </script>
     {% endif %}
-    <script type="text/javascript" src="{{url_for('static', filename='vendor/specialedit/specialedit.min.js')}}"></script>
+    <script type="text/javascript" src="{{url_for('static', filename='vendor/specialedit/specialedit.js')}}"></script>
     <script type="text/javascript" src="{{url_for('static', filename='js/scripts.min.js')}}"></script>
     <script type="text/javascript" src="{{url_for('static', filename='js/errors.js')}}"></script>
     <script>
