--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1737,6 +1737,13 @@ input[type="radio"] + label {
     cursor: pointer
 }
 
+a.anchor {
+    display: block;
+    position: relative;
+    top: -90px;
+    visibility: hidden;
+}
+
 .btn-circle {
     z-index: 1;
     width: 90px;
@@ -2118,6 +2125,66 @@ input[type="radio"] + label {
 .badge-success-inverse {
     background-color: #fff;
     color: #2B9884;
+}
+
+
+/* Callouts */
+
+.bs-callout {
+    padding: 20px;
+    margin: 20px 0;
+    border: 1px solid #ccc;
+    border-left-width: 5px;
+    border-radius: 3px;
+}
+.bs-callout h4 {
+    margin-top: 0;
+    margin-bottom: 5px;
+}
+.bs-callout p:last-child {
+    margin-bottom: 0;
+}
+.bs-callout code {
+    border-radius: 3px;
+}
+.bs-callout+.bs-callout {
+    margin-top: -5px;
+}
+.bs-callout-default {
+    border-left-color: #ADADAD;
+}
+.bs-callout-default h4 {
+    color: #ADADAD;
+}
+.bs-callout-primary {
+    border-left-color: #357ebd;
+}
+.bs-callout-primary h4 {
+    color: #357ebd;
+}
+.bs-callout-success {
+    border-left-color: #2B9884;
+}
+.bs-callout-success h4 {
+    color: #2B9884;
+}
+.bs-callout-danger {
+    border-left-color: #2B9884;
+}
+.bs-callout-danger h4 {
+    color: #2B9884;
+}
+.bs-callout-warning {
+    border-left-color: #e38d13;
+}
+.bs-callout-warning h4 {
+    color: #e38d13;
+}
+.bs-callout-info {
+    border-left-color: #5bc0de;
+}
+.bs-callout-info h4 {
+    color: #5bc0de;
 }
 
 
