--- a/templates/_flash_messages.html
+++ b/templates/_flash_messages.html
@@ -3,7 +3,7 @@
         {%if messages %}
             {% for category, message in messages %}
                 <script>
-                   pybossaNotify('{{message|safe}}', "{{category}}");
+                   pybossaNotify("{{message|safe}}", "{{category}}");
                 </script>
             {% endfor %}
         {% endif %}
