--- a/templates/_flash_messages.html
+++ b/templates/_flash_messages.html
@@ -1,9 +1,9 @@
 <div id="alert-messages">
     {% with messages = get_flashed_messages(with_categories=True) %}
-        {%if messages %}
+        {% if messages %}
             {% for category, message in messages %}
                 <script>
-                   pybossaNotify("{{message|safe}}", "{{category}}");
+                   pybossaNotify("{{ message|tojson }}", "{{ category }}");
                 </script>
             {% endfor %}
         {% endif %}
