Improve pybossa-discourse integration

--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -40,15 +40,10 @@
                 <!-- See https://github.com/alexandermendes/pybossa-discourse -->
                 <li class="nav-link{% if active_page == 'community' %} active{% endif %}">
                     {% if 'pybossa_discourse' in plugins %}
-                    <a href="{{ url_for('discourse.index')}}">Community <span id="notifications" class="badge badge-info"></span></a>
-                    <script>
-                        {% if discourse.user_unread_notifications_count() %}
-                            var notifications = {{ discourse.user_unread_notifications_count() }};
-                            if (notifications > 0) {
-                                $('#notifications').html(notifications);
-                            }
-                        {% endif %}
-                    </script>
+                        {% set n = discourse.notifications() %}
+                        <a href="{{ url_for('discourse.index')}}">Community
+                            {% if n %}<span id="notifications" class="badge badge-info">{{ n }}</span>{% endif %}
+                        </a>
                     {% else %}
                     <a href="{{ url_for('account.index')}}">Community</a>
                     {% endif %}
