--- a/templates/projects/project.html
+++ b/templates/projects/project.html
@@ -46,9 +46,11 @@
 
     <div class="container container-padded">
         <div class="col-xs-10 col-xs-offset-1">
+            {% if project.info.get('tutorial_video') %}
             <div class="row text-center container-padded">
                 {{ project.info['tutorial_video']|safe }}
             </div>
+            {% endif %}
             {% if project.long_description %}
                 {{ project.long_description | e | markdown }}
             {% endif %}
@@ -60,8 +62,8 @@
 
 <section class="inset-shadow-top">
     <div class="container container-padded">
-        <div class="col-xs-12 text-center">
-            <div class="row">
+        <div class="row">
+            <div class="col-xs-12 text-center">
                 {% if overall_progress < 100 %}
                 <h2>Get involved</h2>
                 <p>Your contributions will have a direct impact on enabling future reasearch at the British Library.<p>
@@ -75,12 +77,26 @@
                     <a href="{{ url_for('project.index')}}" class="btn btn-danger">View all projects</a>
                 </div>
                 {% endif %}
+
                 <hr class="padding-bottom-xs">
+
+                {% if 'pybossa_discourse' in plugins %}
+                <div class="col-xs-12 col-md-6 col-md-offset-3 padding-top-md">
+                    {{ discourse.comments() }}
+                </div>
+                {% endif %}
+                
                 {{ helper.render_social_media_buttons("www.libcrowds.com/project/{{ project.short_name }}", "Come and give us a hand with {{ project.name }}!") }}
             </div>
         </div>
-    </div>
 </section>
+
+{% if 'pybossa_discourse' in plugins %}
+    <div class="col-xs-12 col-md-6 col-md-offset-3 text-center">
+        <hr class="padding-bottom-xs">
+        {{ discourse.comments() }}
+    </div>
+{% endif %}
 
 <script src="{{url_for('static', filename='js/btn-progress.js')}}" type="text/javascript"></script>
 <link href="{{url_for('static', filename='css/btn-progress.css')}}" rel="stylesheet" type="text/css" />
