--- a/templates/projects/tasks.html
+++ b/templates/projects/tasks.html
@@ -147,21 +147,9 @@
                         </a>
                     </div>
 
-                    <!-- See https://github.com/alexandermendes/libcrowds-analyst -->
-                    {% if "libcrowds_analyst" in plugins %}
-                    <div id="rules" class="col-sm-6 col-md-4">
-                        <a href="{{ url_for('analyst.browse', short_name=project.short_name) }}" rel="nofollow">
-                            <div class="well well-link">
-                                <span class="fa fa-balance-scale fa-4x"></span>
-                                <h3 class="margin-bottom-xs">Analyse</h3>
-                            </div>
-                        </a>
-                    </div>
-                    {% endif %}
-
                     <!-- See https://github.com/alexandermendes/pybossa-github-builder -->
                     {% if "pybossa_github_builder" in plugins %}
-                    <div id="rules" class="col-sm-6 col-md-4">
+                    <div class="col-sm-6 col-md-4">
                         <a href="{{ url_for('github.sync', short_name=project.short_name) }}" rel="nofollow">
                             <div class="well well-link">
                                 <span class="fa fa-github fa-4x"></span>
