--- a/templates/base.html
+++ b/templates/base.html
@@ -49,6 +49,7 @@
         <script type="text/javascript" src="{{url_for('static', filename='vendor/browser-detection/browser-detection.min.js')}}"></script>
         <script type="text/javascript" src="{{url_for('static', filename='vendor/bootstrap-3.3.2/js/bootstrap.min.js')}}"></script>
         <script type="text/javascript" src="{{url_for('static', filename='vendor/select2/js/select2.min.js')}}"></script>
+        <script type="text/javascript" src="{{url_for('static', filename='vendor/openseadragon-2.2.1/openseadragon.min.js)}}"></script>
         <script type="text/javascript" src="{{url_for('static', filename='js/flash-messages.js')}}"></script>
 
         {% include '_ga.html' ignore missing %}
