--- a/templates/projects/presenter.html
+++ b/templates/projects/presenter.html
@@ -10,7 +10,7 @@
             });
 </script>
 <script src="{{url_for('static', filename='js/pybossa/pybossa.js')}}?v1.2.0" type="text/javascript"></script>
-<div class="container container-main">
+<div class="container container-fluid">
     {% if invite_new_volunteers %}
         <div class="row">
             <div class="col-xs-12 text-center padding-top-lg">
