--- a/templates/base.html
+++ b/templates/base.html
@@ -48,6 +48,8 @@
         <script type="text/javascript" src="{{url_for('static', filename='js/vendor/modernizr.min.js')}}"></script>
         <script type="text/javascript" src="{{url_for('static', filename='vendor/browser-detection/browser-detection.min.js')}}"></script>
         <script type="text/javascript" src="{{url_for('static', filename='vendor/bootstrap-3.3.2/js/bootstrap.min.js')}}"></script>
+        <script type="text/javascript" src="{{url_for('static', filename='vendor/openseadragon-2.2.1/openseadragon.js')}}"></script>
+        <script type="text/javascript" src="{{url_for('static', filename='vendor/openseadragonselection/dist/openseadragonselection.js')}}"></script>
         <script type="text/javascript" src="{{url_for('static', filename='vendor/select2/js/select2.min.js')}}"></script>
         <script type="text/javascript" src="{{url_for('static', filename='js/flash-messages.js')}}"></script>
 
